# vcon

./: Cargo.toml  agent.md
cartridges/audio-smoke/: vcon.toml
cartridges/input-diagnostics/: vcon.toml
cartridges/physics-demo/: vcon.toml
cartridges/sample-game/: vcon.toml
cartridges/save-quota/: vcon.toml
cartridges/save-recovery/: vcon.toml
cartridges/save-smoke/: vcon.toml
cartridges/snake-demo/: vcon.toml
docs/: final-implementation-v1-plan.md  foundation-module.md  metal-wgpu-backend-plan.md  virtual-console-execution-plan.md  virtual-console-plan.md
docs/reports/: release-readiness-2026-03-06.md  release-readiness-2026-03-09.md  steam-deck-validation-2026-03-06.md  steam-deck-validation-2026-03-09.md
scripts/: run_acceptance_suite.sh
tests/: README.md
vcon-engine/: Cargo.toml
vcon-engine/src/: audio.rs  host.rs  input.rs  input_mapping.rs  lib.rs  manifest.rs  physics.rs  render.rs  sandbox.rs  scene.rs  storage.rs
vcon-engine/tests/: foundation_smoke.rs
vcon-pack/: Cargo.toml
vcon-pack/src/: main.rs
vcon-pack/tests/: validate_smoke.rs
vcon-runtime/: Cargo.toml
vcon-runtime/src/: audio_backend.rs  gamepad.rs  main.rs  python_host.rs  render_backend.rs  wgpu_presenter.rs  window_runtime.rs
vcon-runtime/tests/: audio_playback_smoke.rs  backend_parity.rs  controller_hotplug.rs  determinism_replay.rs  input_diagnostics_smoke.rs  performance_smoke.rs  physics_box2d_replay.rs  physics_demo_smoke.rs  render_golden.rs  runtime_smoke.rs  sandbox_bypass_regression.rs  save_smoke.rs  windowed_wgpu_smoke.rs
vcon-sdk/: REFERENCE.md
(+22 files in other folders)
