[package]
name = "vcon-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pyo3.workspace = true
minifb = "0.27"
vcon-engine = { path = "../vcon-engine" }

[dev-dependencies]
serde_json = "1"
